<resources>
    <string name="app_name">My Memories</string>
    <string name="title_maps">Maps</string>
    <string name="title_memory">Memória</string>

    <string name="title_item_memory_date">22/10/2020</string>
    <string name="title_item_memory_city">em %s</string>



    <string name="btn_camera">Câmera</string>
    <string name="btn_galeria">Galeria</string>
    <string name="btn_other_location">Usar Outra Localização</string>

    <string name="title_city">Cidade</string>
    <string name="title_description">Descrição</string>

    <string name="title_local">Localização:</string>
    <string name="title_latitude">Latitude</string>
    <string name="title_longitude">Longitude</string>
</resources>